@@ -9,11 +9,11 @@
    is a form (see below) that translators should fill out and send to the
    Free Software Foundation.
 
-  <p>The Free Software Foundation acts like a kind of attorney that witnesses
-   the disclaimer.  Some translators mis-read the translation disclaimer as
-   assigning the translation works to the FSF, and are disturbed by this
-   impression.  Such an assignment is not the case.  The FSF just acts as a
-   recipient and attorney for your papers, not as an assignee.</p>
+  <p>The Free Software Foundation (FSF) acts like a kind of attorney that
+   witnesses the disclaimer.  Some translators mis-read the translation
+   disclaimer as assigning the translations to the FSF, and are disturbed by
+   this impression.  Such an assignment is not the case.  The FSF just acts
+   as a recipient and attorney for your papers, not as an assignee.</p>
 
   <p>A translator usually disclaims all translations he or she could produce
    for any package.  Yet the need for disclaimers is decided on a per package
@@ -26,23 +26,16 @@
    once and for all, to work on all translations they will feel like, whether
    GNU or not.</p>
 
-  <p>An unfilled form is available here, currently only a plain text version:</p>
+  <p>An unfilled form is available here:</p>
 
   <ul>
    <li><a href="../disclaim.txt">Disclaimer (plain ASCII)</a>
   </ul>
 
-  <p>The FSF noticed that the PDF version (and possibly others) of the
-   translation disclaimer did not include the question at the bottom asking
-   which team the person is translating for.  This is on the ASCII version, but
-   not many people use that, apparently.  It would probably make our jobs easier
-   to make sure that all the versions included that part -- in the meantime,
-   however, please make sure you write for which team you intend to translate.
-
-  <p>Once you have the file, you should print it out on paper, fill it out and
-   sign it with a pen, slip the results into a paper envelope, lick a stamp
-   and send it by non-electronic mail, using the old slow way, to the address
-   given in the form.  It may take many days for your envelope to reach the
+  <p>Print the file out on paper, fill it out and sign it with a pen, slip the
+   results into a paper envelope, lick a stamp and send it by non-electronic
+   mail, using the old slow way, to the address given in the form -- or fax it
+   to the given number.  It may take many days for your envelope to reach the
    FSF's headquarters, and maybe two more weeks before your form is properly
    processed there.  You have to account for postal delays, but also for the
    fact postal mail is handled in bursts at the FSF, maybe twice per month.
